# sqlite-wrapper

./: .gitignore  CMakeLists.txt  LICENSE
examples/: basic_usage.cpp
include/: database.h  exceptions.h
src/: database.cpp
